--- a/ToDoApp/app/src/main/AndroidManifest.xml
+++ b/ToDoApp/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="tsturm18.pos.todoapp">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,8 +16,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ToDoApp">
-        <activity android:name=".task.TaskActivity"></activity>
+        android:theme="@style/Theme.ToDoApp"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".LogIn_SignUp"></activity>
+        <activity android:name=".task.TaskActivity" />
         <activity android:name=".taskList.EditListActivity" />
         <activity android:name=".taskList.AddListActivity" />
         <activity android:name=".task.EditTaskActivity" />
