--- a/ToDoApp/app/build.gradle
+++ b/ToDoApp/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.activity:activity:1.2.2"
+    implementation "androidx.fragment:fragment:1.3.2"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.material:material:1.3.0'
