--- a/ToDoApp/app/src/main/AndroidManifest.xml
+++ b/ToDoApp/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         android:theme="@style/Theme.ToDoApp"
         android:usesCleartextTraffic="true">
         <activity android:name=".LogIn_SignUp"></activity>
-        <activity android:name=".task.TaskActivity" />
+        <activity android:name=".task.TaskActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".taskList.MainActivity"/>
         <activity android:name=".taskList.EditListActivity" />
         <activity android:name=".taskList.AddListActivity" />
-        <activity android:name=".task.EditTaskActivity" />
+        <activity android:name=".task.EditTaskActivity"/>
         <activity android:name=".SettingActivity" />
         <activity android:name=".task.AddTaskActivity" />
         <activity android:name=".taskList.MainActivity">
